applications/kubernetes/stirling-pdf/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf-ingressroute
  namespace: stirling-pdf
spec:
  ingressClassName: traefik-internal
  entryPoints:
  - websecure
  routes:
  - match: Host(`pdf.kube.eggenberg.io`)
    kind: Rule
    services:
    - name: stirling-pdf-stirling-pdf-chart
      port: 8080
  tls:
    secretName: stirling-pdf-certificate-secret
